# libpicoquant

./: .gitignore  GNUmakefile.am  INSTALL  LICENSE  README  README.md  TODO  VERSION  configure  configure.ac  setup.py  test.py
_hydraharp/: _hydraharp.i  errorcodes.h  hhdefin.i  hhlib.h  hhlib.i  hhlib.lib  hydraharp.i
_picoharp/: _picoharp.i  errorcodes.i  phdefin.i  picoharp.i
_picoquant/hydraharp/: errorcodes.h  errorcodes.i  hhdefin.h  hhlib.h
_picoquant/picoharp/: errorcodes.h  phlib.h  phlib.i
doc/tex/: GNUmakefile  picoquant.tex
lib/: hhlib64.lib  phlib32.lib
man/: GNUmakefile.am  picoquant.1
picoquant/: Picoquant.py  TCSPC.py  __init__.py  comm_lib_common.i  files.i  tcspc.py  tspsc.py
picoquant/hydraharp/: HydraHarp.py  __init__.py  hhdefin.h  hydraharp_comm.i  hydraharp_comm.py  hydraharp_comm_wrap.c
picoquant/picoharp/: PicoHarp.py  __init__.py  phdefin.h
picoquant/timeharp/: __init__.py  timeharp_comm.i
python/: build.bat  setup.py
python/picoquant/: HHD.py  PHD.py  (+4 more)
sample_data/: clean_contents  generate_contents
src/: GNUmakefile  GNUmakefile.am  README  continuous.h  error.c  error.h  files.c  files.h  header.c  header.h  hydraharp.c  hydraharp.h  interactive.c  interactive.h  limits.c  limits.h  modes.c  modes.h  options.c  options.h  picoharp.c  picoharp.h  picoquant.c  picoquant.h  picoquant_main.c  ptu_dispatch.c  ptu_dispatch.h  record.h  stream.h  t2.c  t2.h  t3.c  t3.h  timeharp.c  timeharp.h  tttr.c  tttr.h  types.c  types.h  unified.c  (+1 more)
tests/: file_types.py  hydraharp_control.py  picoharp_control.py  timeharp_control.py
(+75 files in other folders)
